<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_sign_up"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">
        <EditText
            android:id="@+id/editfname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/txt_first_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/editText_lname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/txt_last_name"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:theme="@style/TextLabel">
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:theme="@style/TextLabel">
        <EditText
            android:id="@+id/editText_Conpass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/txt_confirm_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">
        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/line_but_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_singup"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="350dp"
                android:background="@drawable/editbackground"
                android:text="@string/txt_sign_up"
                android:textColor="@color/white" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_already_have_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView

                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:onClick="GotoSignIn"
                android:text="@string/signin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
