<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        card_view:cardElevation="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardCornerRadius="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp"

        >

        <RelativeLayout
            android:id="@+id/layout_item"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/background"
            android:contentDescription="@string/txt_todo"
            tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_classname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_class_name"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/tv_nameT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/txt_teacher_name"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_section_Teacher_Act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_classname"
                android:text="@string/txt_section"
                android:textColor="#FFFFFFFF"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>