<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="th.ac.kku.jittikonkul.watcharaphon.projecthonghong.membersListview">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        >

        <RelativeLayout
            android:id="@+id/layout_item"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginRight="16dp"
            android:background="@color/blue"
            android:contentDescription="@string/txt_todo"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/classname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_class_name"
                android:textColor="#FFFFFFFF"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/teacherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_teacher_name"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/classname"
                android:text="@string/txt_section"
                android:textColor="#FFFFFFFF"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
